fix: Disable buttons more visibly

--- a/src/style/common/modal.less
+++ b/src/style/common/modal.less
@@ -369,7 +369,8 @@
     &--disabled,
     &:disabled {
       cursor: default;
-      opacity: 0.75;
+      filter: saturate(0.5);
+      opacity: 0.5;
     }
 
     &--secondary {
